--- a/3.html
+++ b/3.html
@@ -1,30 +1,31 @@
 <!doctype html>
 <html>
 <head>
-  <title>David Oh</title>
+  <title>WEB1</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1><a href="index.html">CANDID MUSIC</a></h1>
-
+  <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
   <ol>
-    <li><a href="1.html">JS Choo</a></li>
-    <li><a href="2.html">Ian Lim</a></li>
-    <li><a href="3.html">David Oh</a></li>
+    <li><a href="1.html">html</a></li>
+    <li><a href="2.html">Css</a></li>
+    <li><a href="3.html">Java</a></li>
 
   </ol>
 
-
-  <h2>David's Face</h2>
-  <p><u>Hansome.</u>
-    </p>
-
-  <img src="원택.jpg" width="30%">
+<div id="article">
+  <h2>Java</h2>
+  <p>`123``The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
 
 
-  <p>
-  Swag.
-  </p>
+  </p></div>
+</grid>
+  <img src="erica.jpg" width="30%">
+
+
+
 </body>
 </html>
