--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Candid Entertainment</title>
+    <title>WEB1</title>
     <meta charset="utf-8">
 
 
@@ -9,11 +9,13 @@
 
 
   <body>
-    <h1><a href="index.html">CANDID MUSIC</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
 
-    <h2><a href="1.html">Let's check the face of Best friends.</a></h2>
-    <img src="music.jpg" width="30%" <br>
-    <p> I don't know what is <strong>CANDID</strong> too. </p>
+    <h2><a href="1.html">Menu</a></h2>
+    <p>123`asfdfafdasvzvzsvThe CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:</p>
+
+    <img src="david.jpg" width="30%" <br>
+
 
   </body>
 </html>
