--- a/1.html
+++ b/1.html
@@ -1,30 +1,36 @@
 <!doctype html>
 <html>
 <head>
-  <title>JS Choo</title>
+  <title>WEB1</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1><a href="index.html">CANDID MUSIC</a></h1>
-
+  <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
   <ol>
+    <li><a href="1.html">WEB</a></li>
+    <li><a href="2.html" class="saw">CSS</a></li>
+    <li><a href="3.html">JAVA</a></li>
+  </ol>
+<!--
+  </ol><ol>
     <li><a href="1.html">JS Choo</a></li>
     <li><a href="2.html">Ian Lim</a></li>
     <li><a href="3.html">David Oh</a></li>
 
-  </ol>
+  </ol>-->
 
-
-  <h2>JS's Face</h2>
-  <p><u>Oh my GOD.</u>
-    </p>
-
-  <img src="준상.jpg" width="30%">
-
-
-  <p>
-  우웩
+<div id="article">
+  <h2>Html</h2>
+  <p>you can use      getComputedStyle. let elem = document.getElementById('test'); let ht = window.getComputedSty\
   </p>
+</div>
+</div>
+  <img src="erica.jpg" width="30%">
+
+
+
 </body>
 </html>
